syntax = "proto3";

package kaboomproto;
option go_package = "github.com/fsufitch/kaboom/proto/go;kaboomproto";

import "./color.proto";

message Board {
  string uuid = 1;

  int64 width  = 2;
  int64 height = 3;

  repeated PlayerColor player_colors = 10;
}